k8s/apps/external/openwebui/endpoint-slice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: openwebui
  namespace: openwebui
  labels:
    kubernetes.io/service-name: openwebui
    endpointslice.kubernetes.io/managed-by: cluster-admins
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 8080
endpoints:
  - addresses:
      - 192.168.1.29
    conditions: {}
