k8s/apps/external/openwebui/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwebui
  namespace: openwebui
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
