k8s/apps/external/openwebui/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openwebui
  namespace: openwebui
spec:
  parentRefs:
    - name: external
      namespace: gateway
    - name: internal
      namespace: gateway
  hostnames:
    - "openwebui.ravil.space"
  rules:
    - backendRefs:
        - name: openwebui
          port: 8080
